--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -34,6 +34,36 @@
             "description": "Wush Wush Coffee Shop için yeniden tasarlanan bu logo, dükkanın baş harfi olan \"W\"yi, kahve kupası formuyla ustaca birleştirir. Koyu kahverengi ile krem tonlarının kullanıldığı merkezdeki akışkan ve dalgalı \"W\" formu, sadece kahve buharını değil, aynı zamanda Wush Wush kahvesinin yetiştiği yüksek rakımlı dağlık alanların soyut bir temsili olarak da işlev görür."
           }
         }
+      },
+      "afis-reklam": {
+        "title": "Afiş ve Reklam Kampanyaları",
+        "projects": {
+          "dior": {
+            "title": "DIOR",
+            "subtitle": "Gözlük Koleksiyonu",
+            "description": "Bu afiş kampanyası, Dior markasının yeni gözlük koleksiyonunu tanıtmak amacıyla, \"PARIS O KADAR YAKINDA\" sloganıyla lüks ve ulaşılabilir bir rüyayı birleştiriyor. Kampanya, gözlükleri sadece bir moda aksesuarı olarak değil, takan kişiye Paris'in zarafetini, cazibesini ve stilini bir bakış uzaklığına getiren bir portal olarak konumlandırıyor. Gizemli bir çekiciliğe sahip model görseli, Dior gözlüklerin ardındaki kendine güveni ve sofistikasyonu vurgularken; büyük ölçekli billboardlardan AVM panolarına kadar çeşitli mecralarda kullanılarak, hedef kitlesine küresel modanın kalbine bir davet sunuyor."
+          },
+          "yetenek-sinavi": {
+            "title": "Yetenek Sınavı",
+            "subtitle": "Konservatuvar",
+            "description": "Konservatuvarın 2025 yılı yetenek sınavı için hazırlanmış bu afiş, klasik sanat ve müzik temasını zarif bir tipografi ve illüstratif keman figürüyle birleştiriyor. Estetik çizgiler ve nota görselleriyle sanatsal bir atmosfer oluşturulmuştur."
+          },
+          "arboris-afis": {
+            "title": "ARBORİS",
+            "subtitle": "Kampanya Afişi",
+            "description": "ARBORİS firmasına özel olarak tasarlanan bu reklam afişi, \"Tüm Tekli Koltuklarda %30 İndirim\" kampanyasını sade ve klasik bir kompozisyonla sunar. Yumuşak tonlar, doğal doku hissi ve zarif bir font tercih edilerek markanın sıcak ve güvenilir imajı vurgulanmıştır."
+          },
+          "bilgilendirme-yarisma": {
+            "title": "Bilgilendirme Ve Yarışma",
+            "subtitle": "Su Kıtlığı Farkındalığı",
+            "description": "Su kıtlığına dikkat çekmek amacıyla tasarlanan bu afiş, minimal bir yaklaşım benimsiyor. Mavi zemin ve sade ikonografik karpuz dilimi sembolüyle, \"su olmadan yaşam olmaz\" mesajı sade ama güçlü bir biçimde aktarılıyor. Tasarım, çevresel farkındalık yaratmayı hedefleyen bir yarışma kapsamında hazırlandı."
+          },
+          "selcuk-ecza-afis": {
+            "title": "Selçuk Ecza",
+            "subtitle": "Billboard Tasarımı",
+            "description": "Selçuk Ecza Deposu için hazırladığım bu billboard tasarımında, markanın güven ve sağlık temalarını öne çıkardım. \"Her Bagajla Sağlığınız Güvence Altında\" sloganı, görselde yer alan bagaj bandı ve medikal çanta kompozisyonuyla desteklenerek, markanın güvenilir hizmet anlayışını güçlü bir görsel mesajla aktarmaktadır."
+          }
+        }
       }
     },
     "items": {
