developing UI requirements

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -233,7 +233,7 @@
   },
   "contact": {
     "title": "Let's work together to transform your ideas into stunning designs",
-    "cta": "Hire Me Now",
+    "cta": "Send Mail",
     "ctaLink": "Contact me",
     "copyLabel": "Copy email address",
     "copied": "Copied",
