--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -233,7 +233,7 @@
   },
   "contact": {
     "title": "Fikirlerinizi çarpıcı tasarımlara dönüştürmek için birlikte çalışalım",
-    "cta": "Hire Me Now",
+    "cta": "Mail gönder",
     "ctaLink": "Benimle iletişime geç",
     "copyLabel": "E-posta adresini kopyala",
     "copied": "Kopyalandı",
